# ctme

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt  conanprofile.txt  ctme.h  ctme_concepts.h  ctme_container_evaluator.h  ctme_debug_logger.h  ctme_evaluate_cell.h  ctme_evaluate_to_array.h  ctme_evaluate_to_container.h  ctme_evaluate_to_vector.h  ctme_mat.h  ctme_mat_product.h  ctme_mat_product_evaluator.h  ctme_mat_sum.h  ctme_mat_sum_evaluator.h  ctme_result_traits.h  ctmm.h  ctmm_cell_evaluator.h  ctmm_concepts.h  ctmm_container_evaluator.h  ctmm_evaluate.h  ctmm_evaluate_cell.h  ctmm_evaluate_to_array.h  ctmm_evaluate_to_arrays.h  ctmm_evaluate_to_container.h  ctmm_evaluate_to_vector.h  ctmm_evaluate_to_vectors.h  ctmm_impl.h  ctmm_mat.h  ctmm_mat_product.h  ctmm_mat_product_evaluator.h  ctmm_mat_traits_evaluator.h  ctmm_mat_traits_size.h  ctmm_mat_types.h  ctmm_matrix_evaluator.h  ctmm_operations.h  ctmm_result_traits.h  (+1 more)
.github/workflows/: tests.yml
benchmark/: CMakeLists.txt  product_of_2_nxn_array_mats.cc  product_of_2_nxn_vector_mats.cc  product_of_n_4x4_array_mats.cc  product_of_n_4x4_vector_mats.cc  utils.h
benchmark/compile_time/: 100_products_of_2_nxn_mats.cc  100_products_of_n_4x4_mats.cc  CMakeLists.txt  utils.h
benchmark/runtime/: CMakeLists.txt  product_of_2_nxn_array_mats.cc  product_of_2_nxn_vector_mats.cc  product_of_n_4x4_array_mats.cc  product_of_n_4x4_vector_mats.cc  utils.h
mat/: ctmm_mat.h  ctmm_mat_evaluator.h  ctmm_mat_size.h
test/: CMakeLists.txt  compile_time_tests.h  debug_logger.cc  evaluate_cell.cc  evaluate_to_array.cc  evaluate_to_container.cc  evaluate_to_vector.cc  mat.cc  mat_product.cc  mat_sum.cc  result_traits.cc  run_time_tests.cc
